--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" 
+          rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
     <script type="module" src="index.js" defer></script>
@@ -11,5 +15,50 @@
 </head>
 <body>
     
+   <main>
+
+    <div class="inputs">
+
+        <div class="wrapper">
+            <label for="DAY">DAY</label>
+            <input type="text" id="DAY" placeholder="DD" maxlength="2">
+            <p id="NULL1" class="error">This field is requered</p>
+            <p id="InvalidDay" class="error">Must be a valid day</p>
+            <p id="InvalidDate1" class="error">Must be a valid date</p>
+        </div>
+
+        <div class="wrapper">
+            <label for="MONTH">MONTH</label>
+            <input type="text" id="MONTH" placeholder="MM" maxlength="2">
+            <p id="NULL2" class="error">This field is requered</p>
+            <p id="InvalidDay" class="error">Must be a valid month</p>
+        </div>
+
+        <div class="wrapper">
+            <label for="YEAR">YEAR</label>
+            <input type="text" id="YEAR" placeholder="YYYY" maxlength="4">
+            <p id="NULL3" class="error">This field is requered</p>
+            <p id="InvalidDay" class="error">Must be in the past</p>
+        </div>
+
+    </div>
+
+    <div class="button"><img src="assets/icon-arrow.svg" alt="seta apontando para baixo" id="btnArrow"></div>
+
+    <div class="results">
+        <div class="result">
+         <span>--</span><h1>years</h1>
+        </div>
+
+        <div class="result">
+         <span>--</span><h1>months</h1>
+        </div>
+
+        <div class="result">
+         <span>--</span><h1>days</h1>
+        </div>
+    </div>
+   </main>
+
 </body>
 </html>
