Calculo de data Feito

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="index.js" defer></script>
+    <script type="module" src="script.js" defer></script>
 
     <title>Age Calculator</title>
 </head>
@@ -43,19 +43,19 @@
 
     </div>
 
-    <div class="button"><img src="assets/icon-arrow.svg" alt="seta apontando para baixo" id="btnArrow"></div>
+    <div class="button" id="btn"><img src="assets/icon-arrow.svg" alt="seta apontando para baixo" id="btnArrow"></div>
 
     <div class="results">
         <div class="result">
-         <span>--</span><h1>years</h1>
+         <span id="anos">--</span><h1>years</h1>
         </div>
 
         <div class="result">
-         <span>--</span><h1>months</h1>
+         <span id="meses">--</span><h1>months</h1>
         </div>
 
         <div class="result">
-         <span>--</span><h1>days</h1>
+         <span id="dias">--</span><h1>days</h1>
         </div>
     </div>
    </main>
