--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
     <div class="inputs">
 
         <div class="wrapper">
-            <label for="DAY">DAY</label>
-            <input type="text" id="DAY" placeholder="DD"  autocomplete="off">
-            <p id="NULL1" class="error">This field is requered</p>
-            <p id="InvalidDay" class="error">Must be a valid day</p>
-            <p id="InvalidDate1" class="error">Must be a valid date</p>
+            <label for="DAY" id="DAYL" class="">DAY</label>
+            <input type="text" id="DAY" placeholder="DD"  autocomplete="off" class="">
+            <p id="NULL1" class="error hide">This field is requered</p>
+            <p id="InvalidDay" class="error hide">Must be a valid day</p>
+            <p id="InvalidDate1" class="error hide">Must be a valid date</p>
         </div>
 
         <div class="wrapper">
-            <label for="MONTH">MONTH</label>
+            <label for="MONTH" id="MONTHL" class="">MONTH</label>
             <input type="text" id="MONTH" placeholder="MM" translate="no"  autocomplete="off">
-            <p id="NULL2" class="error">This field is requered</p>
-            <p id="InvalidDay" class="error">Must be a valid month</p>
+            <p id="NULL2" class="error hide">This field is requered</p>
+            <p id="InvalidMonth" class="error hide">Must be a valid month</p>
         </div>
 
         <div class="wrapper">
-            <label for="YEAR">YEAR</label>
+            <label for="YEAR" id="YEARL">YEAR</label>
             <input type="text" id="YEAR" placeholder="YYYY"  autocomplete="off">
-            <p id="NULL3" class="error">This field is requered</p>
-            <p id="InvalidDay" class="error">Must be in the past</p>
+            <p id="NULL3" class="error hide">This field is requered</p>
+            <p id="InvalidYear" class="error hide">Must be in the past</p>
         </div>
 
     </div>
