--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
           rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/icon.svg">
     <script type="module" src="script.js" defer></script>
 
     <title>Age Calculator</title>
